--- a/index.html
+++ b/index.html
@@ -1,20 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The Guardian API</title>
+	<title></title>
 	<meta charset="utf-8">
-	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">	
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header>
-		<h1 class="title">The Guardian News</h1>
-		<button class="refresh">Refresh</button>
+		<h1>The Guardian News</h1>
+		<button class="refresh">Refresh</button>	
 	</header>
-	<main class="accordion-wrapper">
-			
-	</main>
 
+	<main class="container">
+		<div class="wrapper-accordion">
+			<button class="accordion"></button>
+			<div class="panel"></div>
+		</div>
+		<div class="wrapper-accordion">
+			<button class="accordion"></button>
+			<div class="panel"></div>
+		</div>
+		<div class="wrapper-accordion">
+			<button class="accordion"></button>
+			<div class="panel"></div>
+		</div>
+		<div class="wrapper-accordion">
+			<button class="accordion"></button>
+			<div class="panel"></div>
+		</div>
+		<div class="wrapper-accordion">
+			<button class="accordion"></button>
+			<div class="panel"></div>
+		</div>
+		<div class="wrapper-accordion">
+			<button class="accordion"></button>
+			<div class="panel"></div>
+		</div>
+		<div class="wrapper-accordion">
+			<button class="accordion"></button>
+			<div class="panel"></div>
+		</div>
+		<div class="wrapper-accordion">
+			<button class="accordion"></button>
+			<div class="panel"></div>
+		</div>
+		<div class="wrapper-accordion">
+			<button class="accordion"></button>
+			<div class="panel"></div>
+		</div>
+		<div class="wrapper-accordion">
+			<button class="accordion"></button>
+			<div class="panel"></div>
+		</div>								
+	</main>
+	
+	<footer>
+		<a class="prev btn-controls">&#8249;</a>
+		<a class="next btn-controls">&#8250;</a>
+		<form class="count">	
+			<input type="number" name="page-num" min="1" value="1" class="page-num"> of <span class="total-pages"></span> pages
+		</form>	
+	</footer>
+
+	<div class="error"></div>
 	<script src="js/script.js"></script>
 </body>
 </html>
