--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">	
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
 	<header>
@@ -60,11 +60,11 @@
 		<a class="prev btn-controls">&#8249;</a>
 		<a class="next btn-controls">&#8250;</a>
 		<form class="count">	
-			<input type="number" name="page-num" min="1" value="1" class="page-num"> of <span class="total-pages"></span> pages
+			<input type="text" name="page-num" min="1" value="1" class="page-num"> of <span class="total-pages"></span> pages
 		</form>	
 	</footer>
 
 	<div class="error"></div>
-	<script src="js/script.js"></script>
+	<script src="js/script.min.js"></script>
 </body>
 </html>
