--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
 	</footer>
 
 	<div class="error"></div>
-	<script src="js/script.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
