--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title></title>
+	<title>The Guardian News</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">	
@@ -61,7 +61,7 @@
 		<a class="next btn-controls">&#8250;</a>
 		<form class="count">	
 			
-			<input type="text" name="page-num" min="1" value="1" class="page-num"> of <span class="total-pages"></span> pages
+			<input type="number" name="page-num" min="1" value="1" class="page-num"> of <span class="total-pages"></span> pages
 		</form>	
 	</footer>
 
